fix: resolve fetch errors